# chess-board

./: README.md  pyproject.toml
chess_game/: chess_game.ipynb
tests/: test_chess_game.py
