[tool.poetry]
name = "chess_game"
version = "0.1.0"
description = ""
authors = ["Brian Lemons <brian_lemons@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
